<?xml version="1.0"?>
<package>
  <name>oro_barrett_interface</name>
  <version>0.0.0</version>
  <description>The oro_barrett_interface package</description>

  <maintainer email="jbo@jhu.edu">Jonathan Bohren</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>oro_barrett_msgs</build_depend>
  <run_depend>oro_barrett_msgs</run_depend>

  <build_depend>rtt_rostopic</build_depend>
  <run_depend>rtt_rostopic</run_depend>
</package>
