<?xml version="1.0"?>
<package>
  <name>oro_barrett_interface</name>
  <version>0.1.1</version>
  <description>The oro_barrett_interface package</description>

  <maintainer email="jbo@jhu.edu">Jonathan Bohren</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rtt_oro_barrett_msgs</build_depend>
  <build_depend>rtt_actionlib</build_depend>
  <build_depend>rtt_ros_tools</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>cmake_modules</build_depend>

  <run_depend>rtt_oro_barrett_msgs</run_depend>
  <run_depend>rtt_actionlib</run_depend>

  <export>
    <rtt_ros>
      <plugin_depend>rtt_oro_barrett_msgs</plugin_depend>
    </rtt_ros>
  </export>
</package>
