<?xml version="1.0"?>
<package>
  <name>oro_barrett_msgs</name>
  <version>0.0.0</version>
  <description>The oro_barrett_interface package</description>

  <maintainer email="jbo@jhu.edu">Jonathan Bohren</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rtt_roscomm</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>rtt_roscomm</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
    <rtt_ros>
      <plugin_depend>rtt_roscomm</plugin_depend>
    </rtt_ros>
  </export>
</package>
