<?xml version="1.0"?>
<package>
  <name>oro_barrett_sim</name>
  <version>0.0.0</version>
  <description>The oro_barrett_sim package</description>

  <maintainer email="jbo@jhu.edu">Jonathan Bohren</maintainer>

  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>

  <build_depend>urdf</build_depend>
  <build_depend>oro_barrett_interface</build_depend>
  <build_depend>rtt_oro_barrett_msgs</build_depend>
  <build_depend>rtt_sensor_msgs</build_depend>
  <build_depend>rtt_geometry_msgs</build_depend>
  <build_depend>rtt_ros_tools</build_depend>
  <build_depend>rtt_rosclock</build_depend>
  <build_depend>rtt_ros</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>rtt_roscomm</build_depend>
  <build_depend>gazebo</build_depend>

  <run_depend>urdf</run_depend>
  <run_depend>oro_barrett_interface</run_depend>
  <run_depend>rtt_oro_barrett_msgs</run_depend>
  <run_depend>kdl_typekit</run_depend>
  <run_depend>eigen_typekit</run_depend>
  <run_depend>rtt_sensor_msgs</run_depend>
  <run_depend>rtt_geometry_msgs</run_depend>
  <run_depend>rtt_ros_tools</run_depend>
  <run_depend>rtt_rosclock</run_depend>
  <run_depend>rtt_roscomm</run_depend>
  <run_depend>rtt_ros</run_depend>
  <run_depend>gazebo</run_depend>

  <run_depend>orocos_kdl</run_depend>
  <run_depend>kdl_parser</run_depend>

  <export>
    <rtt_ros>
      <plugin_depend>eigen_typekit</plugin_depend>
      <plugin_depend>kdl_typekit</plugin_depend>
      <plugin_depend>rtt_rosparam</plugin_depend>
      <plugin_depend>rtt_roscomm</plugin_depend>
      <plugin_depend>rtt_sensor_msgs</plugin_depend>
      <plugin_depend>rtt_geometry_msgs</plugin_depend>
      <plugin_depend>rtt_oro_barrett_msgs</plugin_depend>
    </rtt_ros>
  </export>
</package>
