<?xml version="1.0"?>
<package>
  <name>rtt_barrett_hw</name>
  <version>0.0.0</version>
  <description>The rtt_barrett_hw package</description>

  <maintainer email="jbo@jhu.edu">Jonathan Bohren</maintainer>

  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>

  <build_depend>urdf</build_depend>
  <build_depend>barrett</build_depend>
  <build_depend>rtt_barrett_interface</build_depend>
  <run_depend>urdf</run_depend>
  <run_depend>barrett</run_depend>
  <run_depend>rtt_barrett_interface</run_depend>
</package>
