<?xml version="1.0"?>
<package>
  <name>rtt_barrett_interface</name>
  <version>0.0.0</version>
  <description>The rtt_barrett_interface package</description>

  <maintainer email="jbo@jhu.edu">Jonathan Bohren</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>barrett</build_depend>

</package>
